# backend-gis-challenge

./: Dockerfile  Makefile  README.md  pyproject.toml  requirements.in  requirements.txt  run_calc_props.py  setup.py
calculate_properties/: main.py  types.py  utils.py
tests/: conftest.py
tests/data/: linestring.geojson  multipolygon.geojson  multipolygon_holes.geojson  poly_3857.geojson  polygon.geojson
tests/integration/: test_calculate_properties.py
tests/unit/: test_utils.py
