[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backend-gis-challenge"
version = "0.1.0"
description="Add area, centroid, and bbox properties to geojson feature"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "shapely",
    "pyproj",
    "httpx",
    "geojson-pydantic",
    "pytest",
    "pytest-cov",
    "uvicorn",
    "requests",
]